// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array-editing: buildArrayEditingState should build array editing state for an array of objects 1`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "path": Array [
        "array1",
        Object {
          "_key": "123",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "array1Object1String",
            "type": Object {
              "jsonType": "string",
              "name": "string",
              "preview": Object {
                "prepare": [Function],
              },
              "title": "Array 1 Object 1 String",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "title": "String",
                "type": null,
              },
            },
          },
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "array1Object1Array",
            "type": Object {
              "jsonType": "array",
              "name": "array",
              "of": Array [
                Object {
                  "fields": Array [
                    Object {
                      "fieldset": undefined,
                      "group": undefined,
                      "name": "array1Object1ObjectString",
                      "type": Object {
                        "jsonType": "string",
                        "name": "string",
                        "preview": Object {
                          "prepare": [Function],
                        },
                        "title": "Array 1 Object 1 Object String",
                        "type": Object {
                          "jsonType": "string",
                          "name": "string",
                          "title": "String",
                          "type": null,
                        },
                      },
                    },
                  ],
                  "fieldsets": Array [
                    Object {
                      "field": Object {
                        "fieldset": undefined,
                        "group": undefined,
                        "name": "array1Object1ObjectString",
                        "type": Object {
                          "jsonType": "string",
                          "name": "string",
                          "preview": Object {
                            "prepare": [Function],
                          },
                          "title": "Array 1 Object 1 Object String",
                          "type": Object {
                            "jsonType": "string",
                            "name": "string",
                            "title": "String",
                            "type": null,
                          },
                        },
                      },
                      "single": true,
                    },
                  ],
                  "groups": Array [],
                  "jsonType": "object",
                  "name": "array1Object1Object",
                  "options": Object {},
                  "orderings": Array [
                    Object {
                      "by": Array [
                        Object {
                          "direction": "asc",
                          "field": "array1Object1ObjectString",
                        },
                      ],
                      "i18n": Object {
                        "title": Object {
                          "key": "default-orderings.array1Object1ObjectString",
                          "ns": "studio",
                        },
                      },
                      "name": "array1Object1ObjectString",
                      "title": "Array 1 object 1 object string",
                    },
                  ],
                  "preview": Object {
                    "select": Object {
                      "title": "array1Object1ObjectString",
                    },
                  },
                  "title": "Array 1 Object 1 Object",
                  "type": Object {
                    "jsonType": "object",
                    "name": "object",
                    "title": "Object",
                    "type": null,
                  },
                },
              ],
              "title": "Array 1 Object 1 Array",
              "type": Object {
                "jsonType": "array",
                "name": "array",
                "of": Array [],
                "type": null,
              },
            },
          },
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "arrayOfPrimitives",
            "type": Object {
              "jsonType": "array",
              "name": "array",
              "of": Array [
                Object {
                  "jsonType": "string",
                  "name": "string",
                  "preview": Object {
                    "prepare": [Function],
                  },
                  "title": "String",
                  "type": Object {
                    "jsonType": "string",
                    "name": "string",
                    "title": "String",
                    "type": null,
                  },
                },
              ],
              "title": "Array of primitives",
              "type": Object {
                "jsonType": "array",
                "name": "array",
                "of": Array [],
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "array1Object1String",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "preview": Object {
                  "prepare": [Function],
                },
                "title": "Array 1 Object 1 String",
                "type": Object {
                  "jsonType": "string",
                  "name": "string",
                  "title": "String",
                  "type": null,
                },
              },
            },
            "single": true,
          },
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "array1Object1Array",
              "type": Object {
                "jsonType": "array",
                "name": "array",
                "of": Array [
                  Object {
                    "fields": Array [
                      Object {
                        "fieldset": undefined,
                        "group": undefined,
                        "name": "array1Object1ObjectString",
                        "type": Object {
                          "jsonType": "string",
                          "name": "string",
                          "preview": Object {
                            "prepare": [Function],
                          },
                          "title": "Array 1 Object 1 Object String",
                          "type": Object {
                            "jsonType": "string",
                            "name": "string",
                            "title": "String",
                            "type": null,
                          },
                        },
                      },
                    ],
                    "fieldsets": Array [
                      Object {
                        "field": Object {
                          "fieldset": undefined,
                          "group": undefined,
                          "name": "array1Object1ObjectString",
                          "type": Object {
                            "jsonType": "string",
                            "name": "string",
                            "preview": Object {
                              "prepare": [Function],
                            },
                            "title": "Array 1 Object 1 Object String",
                            "type": Object {
                              "jsonType": "string",
                              "name": "string",
                              "title": "String",
                              "type": null,
                            },
                          },
                        },
                        "single": true,
                      },
                    ],
                    "groups": Array [],
                    "jsonType": "object",
                    "name": "array1Object1Object",
                    "options": Object {},
                    "orderings": Array [
                      Object {
                        "by": Array [
                          Object {
                            "direction": "asc",
                            "field": "array1Object1ObjectString",
                          },
                        ],
                        "i18n": Object {
                          "title": Object {
                            "key": "default-orderings.array1Object1ObjectString",
                            "ns": "studio",
                          },
                        },
                        "name": "array1Object1ObjectString",
                        "title": "Array 1 object 1 object string",
                      },
                    ],
                    "preview": Object {
                      "select": Object {
                        "title": "array1Object1ObjectString",
                      },
                    },
                    "title": "Array 1 Object 1 Object",
                    "type": Object {
                      "jsonType": "object",
                      "name": "object",
                      "title": "Object",
                      "type": null,
                    },
                  },
                ],
                "title": "Array 1 Object 1 Array",
                "type": Object {
                  "jsonType": "array",
                  "name": "array",
                  "of": Array [],
                  "type": null,
                },
              },
            },
            "single": true,
          },
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "arrayOfPrimitives",
              "type": Object {
                "jsonType": "array",
                "name": "array",
                "of": Array [
                  Object {
                    "jsonType": "string",
                    "name": "string",
                    "preview": Object {
                      "prepare": [Function],
                    },
                    "title": "String",
                    "type": Object {
                      "jsonType": "string",
                      "name": "string",
                      "title": "String",
                      "type": null,
                    },
                  },
                ],
                "title": "Array of primitives",
                "type": Object {
                  "jsonType": "array",
                  "name": "array",
                  "of": Array [],
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "array1Object",
        "options": Object {},
        "orderings": Array [
          Object {
            "by": Array [
              Object {
                "direction": "asc",
                "field": "array1Object1String",
              },
            ],
            "i18n": Object {
              "title": Object {
                "key": "default-orderings.array1Object1String",
                "ns": "studio",
              },
            },
            "name": "array1Object1String",
            "title": "Array 1 object 1 string",
          },
        ],
        "preview": Object {
          "select": Object {
            "title": "array1Object1String",
          },
        },
        "title": "Array 1 object 1",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "123",
        "_type": "array1Object",
        "array1Object1Array": Array [
          Object {
            "_key": "123",
            "_type": "array1Object1Object",
            "array1Object1ObjectString": "Test string",
          },
        ],
        "array1Object1String": "Test string",
        "arrayOfPrimitives": Array [
          "Test string",
        ],
      },
    },
  ],
  "relativePath": Array [
    "array1",
    Object {
      "_key": "123",
    },
  ],
}
`;

exports[`array-editing: buildArrayEditingState should build array editing state for an array with array fields in nested objects 1`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "path": Array [
        "arrayWithArrayFieldInNestedObjects",
        Object {
          "_key": "key1",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "secondObject",
            "type": Object {
              "fields": Array [
                Object {
                  "fieldset": undefined,
                  "group": undefined,
                  "name": "thirdObject",
                  "type": Object {
                    "fields": Array [
                      Object {
                        "fieldset": undefined,
                        "group": undefined,
                        "name": "nestedArray",
                        "type": Object {
                          "jsonType": "array",
                          "name": "array",
                          "of": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldset": undefined,
                                  "group": undefined,
                                  "name": "nestedString",
                                  "type": Object {
                                    "jsonType": "string",
                                    "name": "string",
                                    "preview": Object {
                                      "prepare": [Function],
                                    },
                                    "title": "Nested String",
                                    "type": Object {
                                      "jsonType": "string",
                                      "name": "string",
                                      "title": "String",
                                      "type": null,
                                    },
                                  },
                                },
                              ],
                              "fieldsets": Array [
                                Object {
                                  "field": Object {
                                    "fieldset": undefined,
                                    "group": undefined,
                                    "name": "nestedString",
                                    "type": Object {
                                      "jsonType": "string",
                                      "name": "string",
                                      "preview": Object {
                                        "prepare": [Function],
                                      },
                                      "title": "Nested String",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "title": "String",
                                        "type": null,
                                      },
                                    },
                                  },
                                  "single": true,
                                },
                              ],
                              "groups": Array [],
                              "jsonType": "object",
                              "name": "nestedObject",
                              "options": Object {},
                              "orderings": Array [
                                Object {
                                  "by": Array [
                                    Object {
                                      "direction": "asc",
                                      "field": "nestedString",
                                    },
                                  ],
                                  "i18n": Object {
                                    "title": Object {
                                      "key": "default-orderings.nestedString",
                                      "ns": "studio",
                                    },
                                  },
                                  "name": "nestedString",
                                  "title": "Nested string",
                                },
                              ],
                              "preview": Object {
                                "select": Object {
                                  "title": "nestedString",
                                },
                              },
                              "title": "Nested Object",
                              "type": Object {
                                "jsonType": "object",
                                "name": "object",
                                "title": "Object",
                                "type": null,
                              },
                            },
                          ],
                          "title": "Nested Array",
                          "type": Object {
                            "jsonType": "array",
                            "name": "array",
                            "of": Array [],
                            "type": null,
                          },
                        },
                      },
                    ],
                    "fieldsets": Array [
                      Object {
                        "field": Object {
                          "fieldset": undefined,
                          "group": undefined,
                          "name": "nestedArray",
                          "type": Object {
                            "jsonType": "array",
                            "name": "array",
                            "of": Array [
                              Object {
                                "fields": Array [
                                  Object {
                                    "fieldset": undefined,
                                    "group": undefined,
                                    "name": "nestedString",
                                    "type": Object {
                                      "jsonType": "string",
                                      "name": "string",
                                      "preview": Object {
                                        "prepare": [Function],
                                      },
                                      "title": "Nested String",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "title": "String",
                                        "type": null,
                                      },
                                    },
                                  },
                                ],
                                "fieldsets": Array [
                                  Object {
                                    "field": Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                    "single": true,
                                  },
                                ],
                                "groups": Array [],
                                "jsonType": "object",
                                "name": "nestedObject",
                                "options": Object {},
                                "orderings": Array [
                                  Object {
                                    "by": Array [
                                      Object {
                                        "direction": "asc",
                                        "field": "nestedString",
                                      },
                                    ],
                                    "i18n": Object {
                                      "title": Object {
                                        "key": "default-orderings.nestedString",
                                        "ns": "studio",
                                      },
                                    },
                                    "name": "nestedString",
                                    "title": "Nested string",
                                  },
                                ],
                                "preview": Object {
                                  "select": Object {
                                    "title": "nestedString",
                                  },
                                },
                                "title": "Nested Object",
                                "type": Object {
                                  "jsonType": "object",
                                  "name": "object",
                                  "title": "Object",
                                  "type": null,
                                },
                              },
                            ],
                            "title": "Nested Array",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [],
                              "type": null,
                            },
                          },
                        },
                        "single": true,
                      },
                    ],
                    "groups": Array [],
                    "jsonType": "object",
                    "name": "object",
                    "options": Object {},
                    "orderings": Array [],
                    "preview": Object {
                      "prepare": [Function],
                      "select": Object {
                        "nestedArray": "nestedArray",
                      },
                    },
                    "title": "Third Object",
                    "type": Object {
                      "jsonType": "object",
                      "name": "object",
                      "title": "Object",
                      "type": null,
                    },
                  },
                },
              ],
              "fieldsets": Array [
                Object {
                  "field": Object {
                    "fieldset": undefined,
                    "group": undefined,
                    "name": "thirdObject",
                    "type": Object {
                      "fields": Array [
                        Object {
                          "fieldset": undefined,
                          "group": undefined,
                          "name": "nestedArray",
                          "type": Object {
                            "jsonType": "array",
                            "name": "array",
                            "of": Array [
                              Object {
                                "fields": Array [
                                  Object {
                                    "fieldset": undefined,
                                    "group": undefined,
                                    "name": "nestedString",
                                    "type": Object {
                                      "jsonType": "string",
                                      "name": "string",
                                      "preview": Object {
                                        "prepare": [Function],
                                      },
                                      "title": "Nested String",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "title": "String",
                                        "type": null,
                                      },
                                    },
                                  },
                                ],
                                "fieldsets": Array [
                                  Object {
                                    "field": Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                    "single": true,
                                  },
                                ],
                                "groups": Array [],
                                "jsonType": "object",
                                "name": "nestedObject",
                                "options": Object {},
                                "orderings": Array [
                                  Object {
                                    "by": Array [
                                      Object {
                                        "direction": "asc",
                                        "field": "nestedString",
                                      },
                                    ],
                                    "i18n": Object {
                                      "title": Object {
                                        "key": "default-orderings.nestedString",
                                        "ns": "studio",
                                      },
                                    },
                                    "name": "nestedString",
                                    "title": "Nested string",
                                  },
                                ],
                                "preview": Object {
                                  "select": Object {
                                    "title": "nestedString",
                                  },
                                },
                                "title": "Nested Object",
                                "type": Object {
                                  "jsonType": "object",
                                  "name": "object",
                                  "title": "Object",
                                  "type": null,
                                },
                              },
                            ],
                            "title": "Nested Array",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [],
                              "type": null,
                            },
                          },
                        },
                      ],
                      "fieldsets": Array [
                        Object {
                          "field": Object {
                            "fieldset": undefined,
                            "group": undefined,
                            "name": "nestedArray",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [
                                Object {
                                  "fields": Array [
                                    Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                  ],
                                  "fieldsets": Array [
                                    Object {
                                      "field": Object {
                                        "fieldset": undefined,
                                        "group": undefined,
                                        "name": "nestedString",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "preview": Object {
                                            "prepare": [Function],
                                          },
                                          "title": "Nested String",
                                          "type": Object {
                                            "jsonType": "string",
                                            "name": "string",
                                            "title": "String",
                                            "type": null,
                                          },
                                        },
                                      },
                                      "single": true,
                                    },
                                  ],
                                  "groups": Array [],
                                  "jsonType": "object",
                                  "name": "nestedObject",
                                  "options": Object {},
                                  "orderings": Array [
                                    Object {
                                      "by": Array [
                                        Object {
                                          "direction": "asc",
                                          "field": "nestedString",
                                        },
                                      ],
                                      "i18n": Object {
                                        "title": Object {
                                          "key": "default-orderings.nestedString",
                                          "ns": "studio",
                                        },
                                      },
                                      "name": "nestedString",
                                      "title": "Nested string",
                                    },
                                  ],
                                  "preview": Object {
                                    "select": Object {
                                      "title": "nestedString",
                                    },
                                  },
                                  "title": "Nested Object",
                                  "type": Object {
                                    "jsonType": "object",
                                    "name": "object",
                                    "title": "Object",
                                    "type": null,
                                  },
                                },
                              ],
                              "title": "Nested Array",
                              "type": Object {
                                "jsonType": "array",
                                "name": "array",
                                "of": Array [],
                                "type": null,
                              },
                            },
                          },
                          "single": true,
                        },
                      ],
                      "groups": Array [],
                      "jsonType": "object",
                      "name": "object",
                      "options": Object {},
                      "orderings": Array [],
                      "preview": Object {
                        "prepare": [Function],
                        "select": Object {
                          "nestedArray": "nestedArray",
                        },
                      },
                      "title": "Third Object",
                      "type": Object {
                        "jsonType": "object",
                        "name": "object",
                        "title": "Object",
                        "type": null,
                      },
                    },
                  },
                  "single": true,
                },
              ],
              "groups": Array [],
              "jsonType": "object",
              "name": "object",
              "options": Object {},
              "orderings": Array [],
              "preview": Object {
                "prepare": [Function],
                "select": Object {
                  "thirdObject": "thirdObject",
                },
              },
              "title": "Second Object",
              "type": Object {
                "jsonType": "object",
                "name": "object",
                "title": "Object",
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "secondObject",
              "type": Object {
                "fields": Array [
                  Object {
                    "fieldset": undefined,
                    "group": undefined,
                    "name": "thirdObject",
                    "type": Object {
                      "fields": Array [
                        Object {
                          "fieldset": undefined,
                          "group": undefined,
                          "name": "nestedArray",
                          "type": Object {
                            "jsonType": "array",
                            "name": "array",
                            "of": Array [
                              Object {
                                "fields": Array [
                                  Object {
                                    "fieldset": undefined,
                                    "group": undefined,
                                    "name": "nestedString",
                                    "type": Object {
                                      "jsonType": "string",
                                      "name": "string",
                                      "preview": Object {
                                        "prepare": [Function],
                                      },
                                      "title": "Nested String",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "title": "String",
                                        "type": null,
                                      },
                                    },
                                  },
                                ],
                                "fieldsets": Array [
                                  Object {
                                    "field": Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                    "single": true,
                                  },
                                ],
                                "groups": Array [],
                                "jsonType": "object",
                                "name": "nestedObject",
                                "options": Object {},
                                "orderings": Array [
                                  Object {
                                    "by": Array [
                                      Object {
                                        "direction": "asc",
                                        "field": "nestedString",
                                      },
                                    ],
                                    "i18n": Object {
                                      "title": Object {
                                        "key": "default-orderings.nestedString",
                                        "ns": "studio",
                                      },
                                    },
                                    "name": "nestedString",
                                    "title": "Nested string",
                                  },
                                ],
                                "preview": Object {
                                  "select": Object {
                                    "title": "nestedString",
                                  },
                                },
                                "title": "Nested Object",
                                "type": Object {
                                  "jsonType": "object",
                                  "name": "object",
                                  "title": "Object",
                                  "type": null,
                                },
                              },
                            ],
                            "title": "Nested Array",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [],
                              "type": null,
                            },
                          },
                        },
                      ],
                      "fieldsets": Array [
                        Object {
                          "field": Object {
                            "fieldset": undefined,
                            "group": undefined,
                            "name": "nestedArray",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [
                                Object {
                                  "fields": Array [
                                    Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                  ],
                                  "fieldsets": Array [
                                    Object {
                                      "field": Object {
                                        "fieldset": undefined,
                                        "group": undefined,
                                        "name": "nestedString",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "preview": Object {
                                            "prepare": [Function],
                                          },
                                          "title": "Nested String",
                                          "type": Object {
                                            "jsonType": "string",
                                            "name": "string",
                                            "title": "String",
                                            "type": null,
                                          },
                                        },
                                      },
                                      "single": true,
                                    },
                                  ],
                                  "groups": Array [],
                                  "jsonType": "object",
                                  "name": "nestedObject",
                                  "options": Object {},
                                  "orderings": Array [
                                    Object {
                                      "by": Array [
                                        Object {
                                          "direction": "asc",
                                          "field": "nestedString",
                                        },
                                      ],
                                      "i18n": Object {
                                        "title": Object {
                                          "key": "default-orderings.nestedString",
                                          "ns": "studio",
                                        },
                                      },
                                      "name": "nestedString",
                                      "title": "Nested string",
                                    },
                                  ],
                                  "preview": Object {
                                    "select": Object {
                                      "title": "nestedString",
                                    },
                                  },
                                  "title": "Nested Object",
                                  "type": Object {
                                    "jsonType": "object",
                                    "name": "object",
                                    "title": "Object",
                                    "type": null,
                                  },
                                },
                              ],
                              "title": "Nested Array",
                              "type": Object {
                                "jsonType": "array",
                                "name": "array",
                                "of": Array [],
                                "type": null,
                              },
                            },
                          },
                          "single": true,
                        },
                      ],
                      "groups": Array [],
                      "jsonType": "object",
                      "name": "object",
                      "options": Object {},
                      "orderings": Array [],
                      "preview": Object {
                        "prepare": [Function],
                        "select": Object {
                          "nestedArray": "nestedArray",
                        },
                      },
                      "title": "Third Object",
                      "type": Object {
                        "jsonType": "object",
                        "name": "object",
                        "title": "Object",
                        "type": null,
                      },
                    },
                  },
                ],
                "fieldsets": Array [
                  Object {
                    "field": Object {
                      "fieldset": undefined,
                      "group": undefined,
                      "name": "thirdObject",
                      "type": Object {
                        "fields": Array [
                          Object {
                            "fieldset": undefined,
                            "group": undefined,
                            "name": "nestedArray",
                            "type": Object {
                              "jsonType": "array",
                              "name": "array",
                              "of": Array [
                                Object {
                                  "fields": Array [
                                    Object {
                                      "fieldset": undefined,
                                      "group": undefined,
                                      "name": "nestedString",
                                      "type": Object {
                                        "jsonType": "string",
                                        "name": "string",
                                        "preview": Object {
                                          "prepare": [Function],
                                        },
                                        "title": "Nested String",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "title": "String",
                                          "type": null,
                                        },
                                      },
                                    },
                                  ],
                                  "fieldsets": Array [
                                    Object {
                                      "field": Object {
                                        "fieldset": undefined,
                                        "group": undefined,
                                        "name": "nestedString",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "preview": Object {
                                            "prepare": [Function],
                                          },
                                          "title": "Nested String",
                                          "type": Object {
                                            "jsonType": "string",
                                            "name": "string",
                                            "title": "String",
                                            "type": null,
                                          },
                                        },
                                      },
                                      "single": true,
                                    },
                                  ],
                                  "groups": Array [],
                                  "jsonType": "object",
                                  "name": "nestedObject",
                                  "options": Object {},
                                  "orderings": Array [
                                    Object {
                                      "by": Array [
                                        Object {
                                          "direction": "asc",
                                          "field": "nestedString",
                                        },
                                      ],
                                      "i18n": Object {
                                        "title": Object {
                                          "key": "default-orderings.nestedString",
                                          "ns": "studio",
                                        },
                                      },
                                      "name": "nestedString",
                                      "title": "Nested string",
                                    },
                                  ],
                                  "preview": Object {
                                    "select": Object {
                                      "title": "nestedString",
                                    },
                                  },
                                  "title": "Nested Object",
                                  "type": Object {
                                    "jsonType": "object",
                                    "name": "object",
                                    "title": "Object",
                                    "type": null,
                                  },
                                },
                              ],
                              "title": "Nested Array",
                              "type": Object {
                                "jsonType": "array",
                                "name": "array",
                                "of": Array [],
                                "type": null,
                              },
                            },
                          },
                        ],
                        "fieldsets": Array [
                          Object {
                            "field": Object {
                              "fieldset": undefined,
                              "group": undefined,
                              "name": "nestedArray",
                              "type": Object {
                                "jsonType": "array",
                                "name": "array",
                                "of": Array [
                                  Object {
                                    "fields": Array [
                                      Object {
                                        "fieldset": undefined,
                                        "group": undefined,
                                        "name": "nestedString",
                                        "type": Object {
                                          "jsonType": "string",
                                          "name": "string",
                                          "preview": Object {
                                            "prepare": [Function],
                                          },
                                          "title": "Nested String",
                                          "type": Object {
                                            "jsonType": "string",
                                            "name": "string",
                                            "title": "String",
                                            "type": null,
                                          },
                                        },
                                      },
                                    ],
                                    "fieldsets": Array [
                                      Object {
                                        "field": Object {
                                          "fieldset": undefined,
                                          "group": undefined,
                                          "name": "nestedString",
                                          "type": Object {
                                            "jsonType": "string",
                                            "name": "string",
                                            "preview": Object {
                                              "prepare": [Function],
                                            },
                                            "title": "Nested String",
                                            "type": Object {
                                              "jsonType": "string",
                                              "name": "string",
                                              "title": "String",
                                              "type": null,
                                            },
                                          },
                                        },
                                        "single": true,
                                      },
                                    ],
                                    "groups": Array [],
                                    "jsonType": "object",
                                    "name": "nestedObject",
                                    "options": Object {},
                                    "orderings": Array [
                                      Object {
                                        "by": Array [
                                          Object {
                                            "direction": "asc",
                                            "field": "nestedString",
                                          },
                                        ],
                                        "i18n": Object {
                                          "title": Object {
                                            "key": "default-orderings.nestedString",
                                            "ns": "studio",
                                          },
                                        },
                                        "name": "nestedString",
                                        "title": "Nested string",
                                      },
                                    ],
                                    "preview": Object {
                                      "select": Object {
                                        "title": "nestedString",
                                      },
                                    },
                                    "title": "Nested Object",
                                    "type": Object {
                                      "jsonType": "object",
                                      "name": "object",
                                      "title": "Object",
                                      "type": null,
                                    },
                                  },
                                ],
                                "title": "Nested Array",
                                "type": Object {
                                  "jsonType": "array",
                                  "name": "array",
                                  "of": Array [],
                                  "type": null,
                                },
                              },
                            },
                            "single": true,
                          },
                        ],
                        "groups": Array [],
                        "jsonType": "object",
                        "name": "object",
                        "options": Object {},
                        "orderings": Array [],
                        "preview": Object {
                          "prepare": [Function],
                          "select": Object {
                            "nestedArray": "nestedArray",
                          },
                        },
                        "title": "Third Object",
                        "type": Object {
                          "jsonType": "object",
                          "name": "object",
                          "title": "Object",
                          "type": null,
                        },
                      },
                    },
                    "single": true,
                  },
                ],
                "groups": Array [],
                "jsonType": "object",
                "name": "object",
                "options": Object {},
                "orderings": Array [],
                "preview": Object {
                  "prepare": [Function],
                  "select": Object {
                    "thirdObject": "thirdObject",
                  },
                },
                "title": "Second Object",
                "type": Object {
                  "jsonType": "object",
                  "name": "object",
                  "title": "Object",
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "firstObject",
        "options": Object {},
        "orderings": Array [],
        "preview": Object {
          "prepare": [Function],
          "select": Object {
            "secondObject": "secondObject",
          },
        },
        "title": "First Object",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "key1",
        "_type": "firstObject",
        "secondObject": Object {
          "thirdObject": Object {
            "nestedArray": Array [
              Object {
                "_key": "key2",
                "_type": "nestedObject",
                "nestedString": "Nested string",
              },
            ],
          },
        },
      },
    },
    Object {
      "path": Array [
        "arrayWithArrayFieldInNestedObjects",
        Object {
          "_key": "key1",
        },
        "secondObject",
        "thirdObject",
        "nestedArray",
        Object {
          "_key": "key2",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "nestedString",
            "type": Object {
              "jsonType": "string",
              "name": "string",
              "preview": Object {
                "prepare": [Function],
              },
              "title": "Nested String",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "title": "String",
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "nestedString",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "preview": Object {
                  "prepare": [Function],
                },
                "title": "Nested String",
                "type": Object {
                  "jsonType": "string",
                  "name": "string",
                  "title": "String",
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "nestedObject",
        "options": Object {},
        "orderings": Array [
          Object {
            "by": Array [
              Object {
                "direction": "asc",
                "field": "nestedString",
              },
            ],
            "i18n": Object {
              "title": Object {
                "key": "default-orderings.nestedString",
                "ns": "studio",
              },
            },
            "name": "nestedString",
            "title": "Nested string",
          },
        ],
        "preview": Object {
          "select": Object {
            "title": "nestedString",
          },
        },
        "title": "Nested Object",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "key2",
        "_type": "nestedObject",
        "nestedString": "Nested string",
      },
    },
  ],
  "relativePath": Array [
    "arrayWithArrayFieldInNestedObjects",
    Object {
      "_key": "key1",
    },
    "secondObject",
    "thirdObject",
    "nestedArray",
    Object {
      "_key": "key2",
    },
  ],
}
`;

exports[`array-editing: buildArrayEditingState should build array editing state for an object with an array 1`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "path": Array [
        "objectWithArray",
        "myArray",
        Object {
          "_key": "key1",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "myString",
            "type": Object {
              "jsonType": "string",
              "name": "string",
              "preview": Object {
                "prepare": [Function],
              },
              "title": "String",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "title": "String",
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "myString",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "preview": Object {
                  "prepare": [Function],
                },
                "title": "String",
                "type": Object {
                  "jsonType": "string",
                  "name": "string",
                  "title": "String",
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "myObject",
        "options": Object {},
        "orderings": Array [
          Object {
            "by": Array [
              Object {
                "direction": "asc",
                "field": "myString",
              },
            ],
            "i18n": Object {
              "title": Object {
                "key": "default-orderings.myString",
                "ns": "studio",
              },
            },
            "name": "myString",
            "title": "My string",
          },
        ],
        "preview": Object {
          "select": Object {
            "title": "myString",
          },
        },
        "title": "Object",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "key1",
        "_type": "myObject",
        "myString": "My string 1",
      },
    },
  ],
  "relativePath": Array [
    "objectWithArray",
    "myArray",
    Object {
      "_key": "key1",
    },
  ],
}
`;

exports[`array-editing: buildArrayEditingState should build array editing state for an object with an array 2`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "path": Array [
        "objectWithArray",
        "myArray",
        Object {
          "_key": "key1",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "myString",
            "type": Object {
              "jsonType": "string",
              "name": "string",
              "preview": Object {
                "prepare": [Function],
              },
              "title": "String",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "title": "String",
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "myString",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "preview": Object {
                  "prepare": [Function],
                },
                "title": "String",
                "type": Object {
                  "jsonType": "string",
                  "name": "string",
                  "title": "String",
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "myObject",
        "options": Object {},
        "orderings": Array [
          Object {
            "by": Array [
              Object {
                "direction": "asc",
                "field": "myString",
              },
            ],
            "i18n": Object {
              "title": Object {
                "key": "default-orderings.myString",
                "ns": "studio",
              },
            },
            "name": "myString",
            "title": "My string",
          },
        ],
        "preview": Object {
          "select": Object {
            "title": "myString",
          },
        },
        "title": "Object",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "key1",
        "_type": "myObject",
        "myString": "My string 1",
      },
    },
  ],
  "relativePath": Array [
    "objectWithArray",
    "myArray",
    Object {
      "_key": "key1",
    },
  ],
}
`;

exports[`array-editing: buildArrayEditingState should build array editing state for an object with an array of references 1`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "path": Array [
        "mixedArray",
        Object {
          "_key": "key1",
        },
      ],
      "schemaType": Object {
        "fields": Array [
          Object {
            "fieldset": undefined,
            "group": undefined,
            "name": "title",
            "type": Object {
              "jsonType": "string",
              "name": "string",
              "preview": Object {
                "prepare": [Function],
              },
              "title": "Title",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "title": "String",
                "type": null,
              },
            },
          },
        ],
        "fieldsets": Array [
          Object {
            "field": Object {
              "fieldset": undefined,
              "group": undefined,
              "name": "title",
              "type": Object {
                "jsonType": "string",
                "name": "string",
                "preview": Object {
                  "prepare": [Function],
                },
                "title": "Title",
                "type": Object {
                  "jsonType": "string",
                  "name": "string",
                  "title": "String",
                  "type": null,
                },
              },
            },
            "single": true,
          },
        ],
        "groups": Array [],
        "jsonType": "object",
        "name": "mixedArrayObject",
        "options": Object {},
        "orderings": Array [
          Object {
            "by": Array [
              Object {
                "direction": "asc",
                "field": "title",
              },
            ],
            "i18n": Object {
              "title": Object {
                "key": "default-orderings.title",
                "ns": "studio",
              },
            },
            "name": "title",
            "title": "Title",
          },
        ],
        "preview": Object {
          "select": Object {
            "title": "title",
          },
        },
        "title": "Mixed array object",
        "type": Object {
          "jsonType": "object",
          "name": "object",
          "title": "Object",
          "type": null,
        },
      },
      "value": Object {
        "_key": "key1",
        "_type": "mixedArrayObject",
        "title": "Mixed array object 1",
      },
    },
  ],
  "relativePath": Array [
    "mixedArray",
    Object {
      "_key": "key1",
    },
  ],
}
`;
